--- a/schedule.html
+++ b/schedule.html
@@ -1077,6 +1077,117 @@
                     </div>
 
                     <div
+                      class="schedule-item wow fadeInUp"
+                      data-wow-delay="250ms"
+                    >
+                      <div class="schedule-time">09h00 – 09h10</div>
+                      <div class="schedule-content">
+                        <h5>
+                          Welcome address by the President of ASEA, and C.E.O.
+                          Rwanda Stock Exchange
+                        </h5>
+
+                        <div class="speakers-section">
+                          <div class="speakers-header">
+                            <i class="fas fa-user"></i>
+                            <span>Speaker</span>
+                          </div>
+
+                          <div class="speaker-highlight">
+                            <div class="speaker-name">
+                              Mr. Pierre Celestin Rwabukumba
+                            </div>
+                            <div class="speaker-title">
+                              President of ASEA & CEO, Rwanda Stock Exchange
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div
+                      class="schedule-item wow fadeInUp"
+                      data-wow-delay="260ms"
+                    >
+                      <div class="schedule-time">09h10 – 09h20</div>
+                      <div class="schedule-content">
+                        <h5>
+                          Remarks by Rwanda Minister of Finance and Economic
+                          Planning
+                        </h5>
+
+                        <div class="speakers-section">
+                          <div class="speakers-header">
+                            <i class="fas fa-user"></i>
+                            <span>Speaker</span>
+                          </div>
+
+                          <div class="speaker-highlight">
+                            <div class="speaker-name">Hon. Yussuf Murangwa</div>
+                            <div class="speaker-title">
+                              Minister of Finance and Economic Planning, Rwanda
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div
+                      class="schedule-item wow fadeInUp"
+                      data-wow-delay="270ms"
+                    >
+                      <div class="schedule-time">09h20 – 09h35</div>
+                      <div class="schedule-content">
+                        <h5>Keynote Address by the Guest of Honour</h5>
+                      </div>
+                    </div>
+
+                    <div
+                      class="schedule-item wow fadeInUp"
+                      data-wow-delay="280ms"
+                    >
+                      <div class="schedule-time">09h35 – 09h40</div>
+                      <div class="schedule-content">
+                        <h5>
+                          OFFICIAL LAUNCH OF MULTICURRENCY DENOMINATED
+                          SECURITIES MARKET SEGMENT (MDS)
+                        </h5>
+                      </div>
+                    </div>
+
+                    <div
+                      class="schedule-item wow fadeInUp"
+                      data-wow-delay="290ms"
+                    >
+                      <div class="schedule-time">09h40 – 10h15</div>
+                      <div class="schedule-content">
+                        <h5>
+                          Lightning: Dr. Donald KABERUKA - Former AfDB President
+                        </h5>
+                        <p>
+                          <strong
+                            >"AFRICA'S POSITIONING AMID CURRENT GLOBAL
+                            UNCERTAINTIES AND DISRUPTIONS"</strong
+                          >
+                        </p>
+
+                        <div class="speakers-section">
+                          <div class="speakers-header">
+                            <i class="fas fa-star"></i>
+                            <span>Keynote Speaker</span>
+                          </div>
+
+                          <div class="speaker-highlight">
+                            <div class="speaker-name">Dr. Donald KABERUKA</div>
+                            <div class="speaker-title">
+                              Former President, African Development Bank
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div
                       class="schedule-item break-item wow fadeInUp"
                       data-wow-delay="300ms"
                     >
