--- a/schedule.html
+++ b/schedule.html
@@ -935,7 +935,7 @@
               <!-- Download Program Button -->
               <div class="program-download-section mt-4">
                 <a
-                  href="docs/ASEA 2025 -RWANDA DRAFT PROGRAM AUG 2025.pdf"
+                  href="docs/ASEA Conference 2025 - Programme.pdf"
                   target="_blank"
                   class="download-program-btn wow fadeInUp"
                   data-wow-delay="400ms"
