--- a/speakers.html
+++ b/speakers.html
@@ -1116,6 +1116,33 @@
             </div>
           </div>
 
+          <!-- Speaker - Diana Okine -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="ceo">
+              <div class="speaker-image">
+                <img src="img/speakers/Diana Okine.png" alt="Diana Okine" />
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Diana Okine</h3>
+                <h4>Deputy General Manager, Strategy & International Relations, Ghana Stock Exchange</h4>
+                <p></p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModalDianaOkine"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
+
           <!-- Speaker 3 -->
             <!-- Speaker - Hortense Mudenge -->
             <div class="col-lg-3 col-md-6 col-sm-6">
@@ -2800,6 +2827,64 @@
         </div>
       </div>
     </div>
+    
+    <!-- Speaker Modal - Diana Okine -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalDianaOkine"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img src="img/speakers/Diana Okine.png" alt="Diana Okine" />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Diana Okine</h3>
+                  <h4>Deputy General Manager, Strategy & International Relations, Ghana Stock Exchange</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Ms Diana Okine is currently the Deputy General Manager in charge of Strategy & International Relations at the Ghana Stock Exchange. Her roles include ensuring the successful implementation of the GSE's Strategic plan, maintaining GSE's strategic alliances and relationship with international partners and donors, Capital Market Associations as well as governmental relations.
+                    </p>
+                    <p>
+                      She has been with the Exchange since its establishment in 1990 serving in various capacities including Company Secretary, Head of Education and Head of Marketing & PR. She has been instrumental in mapping out the strategic direction of the GSE and the formulation of GSE's Strategic plans including the current 3-year plan. She has extensive experience and exposure in capital market operations and activities through various international and local training.
+                    </p>
+                    <p>
+                      Diana holds a BA (Hons) in Psychology with Linguistics and an MBA (Marketing) from the University of Ghana, Legon. She also holds a Diploma in PR and Advertising from the Ghana Institute of Journalism. She is an Accredited Member of the Institute of Public Relations and a member of the Chartered Institute of Marketing Ghana (CIMG).
+                    </p>
+                    <p>
+                      She serves on the Board of the Ghana Investment Securities Institute (GISI) and is a member of the Education and Training Committee of the GSIA as well as the Sustainability & Capacity Building Working Group of the African Securities Exchanges Association (ASEA).
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <!-- Speaker Modal 3 -->
       <!-- Speaker Modal - Naseer Ahmed Akhtar -->
       <div
