--- a/speakers.html
+++ b/speakers.html
@@ -1143,6 +1143,33 @@
             </div>
           </div>
 
+          <!-- Speaker - Lina Tonui -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="ceo">
+              <div class="speaker-image">
+                <img src="img/speakers/Linda.jpeg" alt="Lina Tonui" />
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Lina Tonui</h3>
+                <h4>Project Manager, African Exchanges Linkage Project (AELP)</h4>
+                <p></p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModalLinaTonui"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
+
           <!-- Speaker 3 -->
             <!-- Speaker - Hortense Mudenge -->
             <div class="col-lg-3 col-md-6 col-sm-6">
@@ -2875,6 +2902,60 @@
                     </p>
                     <p>
                       She serves on the Board of the Ghana Investment Securities Institute (GISI) and is a member of the Education and Training Committee of the GSIA as well as the Sustainability & Capacity Building Working Group of the African Securities Exchanges Association (ASEA).
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Speaker Modal - Lina Tonui -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalLinaTonui"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img src="img/speakers/Linda.jpeg" alt="Lina Tonui" />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Lina Tonui</h3>
+                  <h4>Project Manager, African Exchanges Linkage Project (AELP)</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Ms. Lina Tonui is the Project Manager for the African Exchanges Linkage Project (AELP), leading cross-functional teams to advance financial market infrastructure and integration across Africa. With over 20 years in capital markets, asset management, and program management, she brings a practical, results-driven approach to multi-stakeholder initiatives.
+                    </p>
+                    <p>
+                      Previously with Holland Capital Management in Chicago, Lina contributed to portfolio strategy and client solutions. She holds a Master of Finance from the University of Wollongong and undergraduate degrees in Commerce, Business Administration, and Accounting.
+                    </p>
+                    <p>
+                      At the ASEA Conference 2025, Ms. Tonui will share insights on regional market integration and the strategic initiatives driving financial market connectivity across the African continent.
                     </p>
                   </div>
                 </div>
